Location: remove /detail endpoints
